[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/PublicPixel-rv0pA.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Button_Behavior.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Menu.gd" type="Script" id=3]
[ext_resource path="res://Assets/Back Button.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Objects/Leader_Display.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Super_Speed_Up-Sheet.png" type="Texture" id=6]
[ext_resource path="res://Assets/Speed _Up.png" type="Texture" id=7]
[ext_resource path="res://Assets/Grease.png" type="Texture" id=8]
[ext_resource path="res://Assets/Car.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 1 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
LeaderDisplay = ExtResource( 5 )

[node name="ColorRect3" type="ColorRect" parent="."]
margin_right = 480.0
margin_bottom = 320.0
color = Color( 0, 0, 0, 1 )

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 472.0
margin_bottom = 312.0

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 464.0
margin_bottom = 304.0
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="."]
margin_left = 80.0
margin_top = 40.0
margin_right = 240.0
margin_bottom = 56.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 1 )
text = "Fatal Kick"

[node name="Start" type="Button" parent="."]
margin_left = 184.0
margin_top = 152.0
margin_right = 276.0
margin_bottom = 174.0
custom_fonts/font = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
text = "Start"
flat = true
script = ExtResource( 2 )

[node name="Leaderboard" type="Button" parent="."]
margin_left = 136.0
margin_top = 192.0
margin_right = 324.0
margin_bottom = 214.0
custom_fonts/font = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
text = "Leaderboard"
flat = true
script = ExtResource( 2 )

[node name="Help" type="Button" parent="."]
margin_left = 136.0
margin_top = 240.0
margin_right = 324.0
margin_bottom = 262.0
custom_fonts/font = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
text = "Help"
flat = true
script = ExtResource( 2 )

[node name="LeaderboardContainer" type="ColorRect" parent="."]
visible = false
margin_left = 104.0
margin_top = 96.0
margin_right = 360.0
margin_bottom = 272.0

[node name="LeaderboardArea" type="ColorRect" parent="LeaderboardContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 248.0
margin_bottom = 168.0
color = Color( 0, 0, 0, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="LeaderboardContainer/LeaderboardArea"]
margin_left = 8.0
margin_top = 8.0
margin_right = 232.0
margin_bottom = 152.0

[node name="Back" type="Button" parent="LeaderboardContainer"]
margin_left = -72.0
margin_top = 160.0
margin_right = -12.0
margin_bottom = 198.0
custom_styles/focus = SubResource( 4 )
icon = ExtResource( 4 )
flat = true
script = ExtResource( 2 )

[node name="HelpGuide" type="ColorRect" parent="."]
margin_left = 104.0
margin_top = 96.0
margin_right = 360.0
margin_bottom = 272.0

[node name="LeaderboardArea" type="ColorRect" parent="HelpGuide"]
margin_left = 8.0
margin_top = 8.0
margin_right = 248.0
margin_bottom = 168.0
color = Color( 0, 0, 0, 1 )

[node name="Grease" type="Sprite" parent="HelpGuide"]
position = Vector2( 24, 24 )
texture = ExtResource( 8 )

[node name="Label" type="Label" parent="HelpGuide"]
margin_left = 40.0
margin_top = 16.0
margin_right = 80.0
margin_bottom = 30.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 5 )
text = "Slows you down"

[node name="Car" type="Sprite" parent="HelpGuide"]
position = Vector2( 24, 56 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 9 )

[node name="Label2" type="Label" parent="HelpGuide"]
margin_left = 40.0
margin_top = 48.0
margin_right = 264.0
margin_bottom = 64.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 5 )
text = "Game over"

[node name="Speed" type="Sprite" parent="HelpGuide"]
position = Vector2( 24, 88 )
texture = ExtResource( 7 )

[node name="Label3" type="Label" parent="HelpGuide"]
margin_left = 40.0
margin_top = 80.0
margin_right = 264.0
margin_bottom = 96.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 5 )
text = "Speed up"

[node name="Super SpeedUp" type="Sprite" parent="HelpGuide"]
position = Vector2( 20, 120 )
texture = ExtResource( 6 )
hframes = 2

[node name="Label4" type="Label" parent="HelpGuide"]
margin_left = 40.0
margin_top = 112.0
margin_right = 440.0
margin_bottom = 128.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 5 )
text = "Super Speed up/Invincible"

[node name="HelpBack" type="Button" parent="HelpGuide"]
margin_left = -72.0
margin_top = 160.0
margin_right = -12.0
margin_bottom = 198.0
custom_fonts/font = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
icon = ExtResource( 4 )
flat = true
script = ExtResource( 2 )

[connection signal="button_down" from="Start" to="Start" method="_on_button_down"]
[connection signal="button_up" from="Start" to="Start" method="_on_button_up"]
[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="button_down" from="Leaderboard" to="Leaderboard" method="_on_button_down"]
[connection signal="button_up" from="Leaderboard" to="Leaderboard" method="_on_button_up"]
[connection signal="pressed" from="Leaderboard" to="." method="_on_Leaderboard_pressed"]
[connection signal="button_down" from="Help" to="Help" method="_on_button_down"]
[connection signal="button_up" from="Help" to="Help" method="_on_button_up"]
[connection signal="pressed" from="Help" to="." method="_on_Help_pressed"]
[connection signal="button_down" from="LeaderboardContainer/Back" to="LeaderboardContainer/Back" method="_on_button_down"]
[connection signal="pressed" from="LeaderboardContainer/Back" to="." method="_on_Back_pressed"]
[connection signal="button_down" from="HelpGuide/HelpBack" to="HelpGuide/HelpBack" method="_on_button_down"]
[connection signal="button_up" from="HelpGuide/HelpBack" to="HelpGuide/HelpBack" method="_on_button_up"]
[connection signal="pressed" from="HelpGuide/HelpBack" to="." method="_on_HelpBack_pressed"]
